# privacy-chromium-premium-new

./: PRIVACY.md  README.md  VERSION.txt  flags.gn
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
docs/: default_settings.md  extensions-guide.md  first-run-setup.md  implementation-summary.md  privacy-audit.md  security-audit.md
patches/: series
patches/core/ungoogled-chromium/: disable-telemetry-features.patch  doh-changes.patch  enable-chrome-webstore-support.patch  enable-enhanced-privacy-partitioning.patch  enhance-chrome-webstore-access.patch  enhance-webrtc-privacy.patch  remove-google-tracking-parameters.patch  replace-google-search-engine-with-searxng.patch
resources/: default_preferences.json
resources/privacy_chromium_extensions/: README.md  extensions_config.json
