# ==============================================================================
# UCX BROWSER - PRIVACY-FIRST CHROMIUM - BUILD FLAGS
# ==============================================================================
# Maximum privacy and security hardening while maintaining compatibility.
# Philosophy: Privacy > Convenience. No telemetry. No tracking.
# ==============================================================================

# ------------------------------------------------------------------------------
# PERFORMANCE & BUILD
# ------------------------------------------------------------------------------
chrome_pgo_phase=0
clang_use_chrome_plugins=false
disable_fieldtrial_testing_config=true
exclude_unwind_tables=true
treat_warnings_as_errors=false
is_official_build=true
symbol_level=0

# ------------------------------------------------------------------------------
# GOOGLE SERVICES - ALL DISABLED
# ------------------------------------------------------------------------------
enable_hangout_services_extension=false
enable_mdns=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
safe_browsing_mode=0
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
use_official_google_api_keys=false
enable_chrome_features=false

# ------------------------------------------------------------------------------
# SECURITY HARDENING - MAXIMUM
# ------------------------------------------------------------------------------
is_debug=false
enable_isolation=true
enable_originisolation=true
enable_third_party_storage_partitioning=true
enable_shared_storage_api=false
pdf_enable_v8_permissions=false
v8_drumbrake_bounds_checks=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_iterator_rewinding_builtins=false

# Sandbox - maximum isolation
sandbox_distinct_thread_pool=true
sandbox_simple_serial=true

# ------------------------------------------------------------------------------
# PRIVACY - ALL ENABLED/DISABLED APPROPRIATELY
# ------------------------------------------------------------------------------
enable_metrics=false
enable_reporting=false
enable_network_time_service_querying=false
enable_privacy_sandbox_ads=false
enable_client_hints=false
enable_background_thread_pool=true
enable_dns_over_https=true
enable_quic=false

# WebRTC - disable ICE candidates leak
webrtc_ip_handling_policy="default_public_interface_only"

# ------------------------------------------------------------------------------
# CONTENT BLOCKING - STRICT DEFAULTS
# ------------------------------------------------------------------------------
block_third_party_cookies=true
default_secure_referrer_policy="strict-origin-when-cross-origin"
https_only_mode_default=1
tracking_protection_level=2

# ------------------------------------------------------------------------------
# COMPATIBILITY (Streaming services)
# ------------------------------------------------------------------------------
enable_widevine=true

# ------------------------------------------------------------------------------
# DEBUG/DEV
# ------------------------------------------------------------------------------
remove_webcore_debug_symbols=true
enable_profiling=false

# ============================================================================
# END OF UCX BROWSER FLAGS
# ============================================================================
